[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "harbor"
#version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="Alexander Matthew Payne", email="alex.payne@choderalab.org" },
]
description = "A port for docking evaluation and assessment"
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/choderalab/harbor"
"Bug Tracker" = "https://github.com/choderalab/harbor/issues"

[project.scripts]


[tool.setuptools.packages.find]
where = ["."]

[tool.versioningit]


[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones