[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "versioningit" ]

[project]
name = "harbor"
description = "A port for docking evaluation and assessment"
readme = "README.md"
authors = [
  { name = "Alexander Matthew Payne", email = "alex.payne@choderalab.org" },
]
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [  ]

urls."Bug Tracker" = "https://github.com/choderalab/harbor/issues"
urls."Homepage" = "https://github.com/choderalab/harbor"
scripts.harbor = "harbor.cli:cli"

[tool.setuptools.packages.find]
where = [ "." ]

[tool.versioningit]

[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones
